--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,8 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for @user do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+
             <%= f.label :name %>
             <%= f.text_field :name %>
 
@@ -19,4 +21,3 @@
         <% end %>
     </div>
 </div>
-
