--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -234,3 +234,267 @@ span.picture {
     border: 0;
   }
 }
+
+
+.side-nav{
+  position: fixed;
+  top: 45%;
+  right: 20px;
+  z-index: 1;
+  .nav-side-nav{
+    text-align: center;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+    li{
+      display: block;
+      margin-right:  30;
+      padding: 8px 0;
+      a{
+        display: block;
+        width:10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #e2e2e2;
+
+      }
+    }
+  }
+}
+
+.firstpage {
+  h1, h3, p, a, button{
+    font-family: "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Hiragino"
+  }
+
+  height: 750px;
+  width: 110%;
+  margin-left: -5%;
+  .first-bg {
+    height: 800px;
+    width: 110%;
+    position: absolute;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  #first-bg {
+    background-image: url("firstpage-bg.jpg");
+    img{
+      width: 800px;
+    }
+  }
+
+  .headfontsize{
+    margin-top: 70px;
+    line-height: 75px;
+    margin-left: 50px;
+  }
+  .head-h1-content{
+    font-size: 50pt;
+    color: #ffffff;
+    text-align: left;
+  }
+  .title-text{
+
+  }
+  p{
+    margin-top: 30px;
+    color: #ffffff;
+    line-height: 30px;
+  }
+}
+
+
+.secondpage{
+  padding: 2px 0 0 2px;
+  height: auto;
+  margin-top: 100px;
+  .secondpage-courses{
+    // 限制图片宽度, 否则会溢出div
+    img{
+      width: 100%;
+    }
+  }
+  .second-text{
+    margin-bottom: 0px;
+    padding: 20p 0 0 0;
+    letter-spacing: 2px;
+    width: 100%;
+    text-align: center;
+    img{
+      width: 120px;
+    }
+  }
+  .row{
+    margin-right: 0px;
+    margin-left: 0px;
+    .secondpage-courses{
+      float: left;
+      background: #ffffff;
+      padding: 0 2px 2px 0;
+      position: relative;
+      overflow: hidden;
+      a{
+        width: 100%;
+        height: 100%;
+        float: left;
+        text-align: center;
+        position:relative;
+      }
+      .classicon{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        &:hover{
+          background: #1eb450;
+          opacity: 0.8;
+          transition: opacity 0.5s;
+        }
+        h3{
+          text-align: center;
+          margin-top:120px;
+          color: #d1e973;
+        }
+        h1{
+          color: #fff5e1;
+        }
+
+      }
+    }
+  }
+  .secondpagebtn{
+    padding-top: 20px;
+    width: 100%;
+    margin: 0% auto;
+    text-align: center;
+    .btn-lg{
+      font-size: 25px;
+    }
+  }
+
+}
+
+.fourthpage{
+  text-align: center;
+  width: 110%;
+  margin-left: -5%;
+  margin-top: 100px;
+  height: 700px;
+  background-color: #017747;
+  .container{
+    width: 70%;
+    .course-profile-text{
+      color: #ffffff;
+      margin-top: 100px;
+      width: 100%;
+      text-align: center;
+      p{
+        margin-top: 25px;
+        font-size: 20px;
+      }
+    }
+  }
+  .slide{
+    height: 300px;
+    margin-top: 100px;
+  }
+  .carousel-indicators{
+    margin-top: 200px;
+  }
+  .carousel-inner{
+    .item{
+      width: 450px;
+    }
+  }
+  .left.carousel-control{
+
+      background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+      background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+      background-repeat: repeat-x;
+
+
+  }
+}
+
+
+// 调整左右slide按钮的渐变色, 覆盖了bootstrap的原有css
+// 用调试器定位到位置后替换
+.right.carousel-control{
+  left: auto;
+  right: 0;
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+  background-repeat: repeat-x;
+}
+
+
+// 调整slide按钮的位置, 同渐变色一样, 也是覆盖了bootstrap的原有css
+.carousel-control .glyphicon-chevron-right {
+  right: -50%;
+  margin-right: -10px;
+}
+.carousel-control .glyphicon-chevron-left {
+  left: -50%;
+  margin-left: -10px;
+}
+
+
+.fifthpage{
+  .fifthpage-bg{
+    height: 800px;
+    width: 110%;
+    margin-left: -5%;
+    opacity: 80%;
+    position: absolute;
+    background-position: center;
+    background-size: cover;
+  }
+  #fifthpage{
+    background-image: url("wolf.jpg")
+  }
+
+  .footer-text{
+    margin-top: 55px;
+    width:100%;
+    color: #ffffff;
+    font-size:20px;
+    text-align: center;
+  }
+
+  .footer-btn-center{
+    margin-top: 100px;
+    text-align: center;
+  }
+
+  .android-icon{
+    width: 50%;
+    &:hover{
+      border: 2px solid #d9edf7;
+    }
+  }
+
+
+  .footer-text-btn{
+    margin-top: 150px;
+    width: 100;
+    text-align: center;
+  }
+
+  .footer-text-btn-text{
+    margin-top: 20px;
+    color: #000000;
+
+  }
+
+  .footer-text-btn{
+    .btn{
+      font-size: 25px;
+    }
+  }
+}
