--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
-<div class="side-nav" role="navigation">
+<div id="wrapper">
+    <div class="side-nav" role="navigation">
     <ul class="nav-side-nav">
         <li><%= link_to "","#firstpage", :class => "tooltip-side-nav" %></li>
         <li><%= link_to "","#secondpage", :class => "tooltip-side-nav"  %></li>
@@ -70,7 +71,7 @@
 </div>
 
 <div class="fourthpage" id="fourthpage">
-    <div class="container">
+    <div class="fourth-container">
         <div class="course-profile-text">
             <h1>要干活, 必须工具要到位</h1>
             <p>怎么样才能做到最快速的学习, 不知道.</p>
@@ -135,4 +136,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
