--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     </head>
     <body>
         <%= render 'layouts/header' %>
-        <div class="container">
+        <div class="container" id="layout-container">
             <% flash.each do |message_type, message| %>
                 <div class="alert alert-<%= message_type %>"><%= message %></div>
             <% end %>
@@ -19,4 +19,3 @@
         <%= debug(params) if Rails.env.development? %>
     </body>
 </html>
-
