--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "About") %>
 <div class="about-wrapper">
     <div class="side-nav" role="navigation">
         <ul class="nav-side-nav">
