--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,9 @@
             <section class="user_info">
                 <%= render 'shared/user_info' %>
             </section>
+            <section class class="stats">
+                <%= render 'shared/stats' %>
+            </section>
             <section class="micropost_form">
                 <%= render 'shared/micropost_form' %>
             </section>
