--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,7 @@
-@import "/Users/Namyun/.rvm/gems/ruby-2.2.5/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/_bootstrap-sprockets.scss";
-@import "/Users/Namyun/.rvm/gems/ruby-2.2.5/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap";
+// @import "/Users/Namyun/.rvm/gems/ruby-2.2.5/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/_bootstrap-sprockets.scss";
+// @import "/Users/Namyun/.rvm/gems/ruby-2.2.5/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap";
+@import "/home/yunnan/.rvm/gems/ruby-2.2.1/gems/bootstrap-sass-3.3.6/assets/stylesheets/_bootstrap-sprockets.scss";
+@import "/home/yunnan/.rvm/gems/ruby-2.2.1/gems/bootstrap-sass-3.3.6/assets/stylesheets/bootstrap";
 
 /* mixins, variables, etc. */
 $gray-medium-light: #eaeaea;
