change about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,7 +8,7 @@
             <li><%= link_to "","#fifth", :class => "tooltip-side-nav"  %></li>
         </ul>
     </div>
-    <div class="firstpage" id="firstpage">
+    <div class="firstpage" name="firstpage" id="firstpage">
         <div class="first-bg" id="first-bg">
             <div class="container">
                 <div class="row">
